feat: update controllers